<resources>
    <string name="app_name" translatable="false">ADS Messenger</string>
    <string name="agora_app_id">4ed2707e7f18452995fc1835ec43e531</string>
    <string name="phone_number">Phone Number</string>
    <string name="code_received">Code Received</string>
    <string name="app_image_icon">App Image icon</string>
    <string name="send_verification">Send Verification</string>
    <string name="contacts">Contacts</string>
    <string name="group">New Group</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="main_text">ADS Messenger will send you a 6 digit code to verify your phone number.</string>
    <string name="chats_fragment">That is Chats Fragment</string>
    <string name="status_fragment">This is status fragment</string>
    <string name="status_default">Happy to use ADS Messenger</string>
    <string name="error_text">There was some error with verification</string>
    <string name="verify_code">Verify code</string>
    <string name="failed_sign_in">There was some error when logging in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_picture">ProfilePicture</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="update_profile">update profile</string>
    <string name="change_status">change status</string>
    <string name="type_message">Type message</string>
    <string name="textview">TextView</string>
    <string name="open_emoji_keyboard">Open Emoji Keyboard</string>
    <string name="open_files_to_send">Open files to send</string>
    <string name="open_voice">Open voice</string>
    <string name="typing">Type message…</string>
    <string name="send_attachment">Send attachment</string>
    <string name="send_voice">Send voice</string>
    <string name="send_message">Send message</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="enter_channel_name">Enter Channel Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="channel_description">Please give information
        about what describe best your channel \u0020</string>
    <string name="radio_public">Public</string>
    <string name="radio_private">Private</string>
    <string name="text_channel">Public channels name can be found in search</string>
    <string name="link">Link</string>
    <string name="actual_link" translatable="false">https://panther007</string>
    <string name="public_channel_text">Public channels name can be found in ADS search</string>
    <string name="private_channel_text">Private channels can\'t be found in search, users can only join by link</string>
    <string name="info">Info</string>
    <string name="video_call">Video Call</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="channel_name">Channel Name</string>
    <string name="_10_subscribers">10 subscribers</string>
    <string name="scroll_horizontally_to_see_the_users_in_the_group">Scroll Horizontally to see the users in the group</string>
    <string name="admin">Admin</string>
    <string name="profname">profName</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="time_created">Created on</string>
    <string name="subscribers">Subscribers</string>
    <string name="add_users">Add users</string>
    <string name="invite_via_link">Invite via link</string>
    <string name="delete_channel">Delete channel</string>
    <string name="choose_option">Choose an option</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="reply">Reply</string>
    <string name="recording">Recording.....</string>
    <string name="delete_group">Delete Group</string>
    <string name="that_is_the_document_name_on_firebase">That is the document name on firebase</string>
    <string name="_1" translatable="false">1</string>
    <string name="sender">Sender</string>
    <string name="searched">Search</string>
    <string name="channel"> New Channel</string>
    <string name="save_contact">Save contact</string>
    <string name="block">Block</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="medias">Medias</string>
    <string name="make_admin">Make admin</string>
    <string name="remove_user">Remove User</string>
    <string name="get_info">Get Info</string>
    <string name="you">You</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string-array name="options">
        <item>@string/forward</item>
        <item>@string/delete</item>
        <item>@string/reply</item>
        <item>@string/favorites</item>

    </string-array>
    <string-array name="options_msg">
        <item>@string/forward</item>
        <item>@string/delete</item>
        <item>@string/reply</item>
        <item>@string/edit</item>
        <item>@string/favorites</item>
    </string-array>
    <string-array name="options_">
        <item>@string/save_contact</item>
        <item>@string/send_message</item>
    </string-array>
    <string-array name="options__">
        <item>@string/make_admin</item>
        <item>@string/remove_user</item>
        <item>@string/get_info</item>
    </string-array>
    <string-array name="options___">
        <item>@string/remove_user</item>
        <item>@string/get_info</item>
    </string-array>
    <string-array name="options_audio_video_image">
        <item>@string/forward</item>
        <item>@string/delete</item>
        <item>@string/reply</item>
        <item>@string/save_to_gallery</item>
        <item>@string/favorites</item>
    </string-array>
    <string-array name="message_options">
        <item>@string/forward</item>
        <item>@string/delete</item>
    </string-array>
    <string-array name="admin_channel_options">
        <item>@string/m_comment</item>
        <item>@string/forward</item>
        <item>@string/delete</item>
        <item>@string/edit</item>
    </string-array>
    <string-array name="subscriber_channel_options">
        <item>@string/m_comment</item>
        <item>@string/forward</item>
    </string-array>
    <string-array name="channel_options">
        <item>@string/forward</item>
        <item>@string/delete</item>
        <item>@string/save_to_gallery</item>
    </string-array>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Text!</string>
    <string name="slide_1_desc">Texting has never been that easier</string>
    <string name="slide_2_title">Group Text</string>
    <string name="slide_2_desc">Have fun talking to family and group of friends at once!</string>
    <string name="slide_3_title">Share your moments</string>
    <string name="slide_3_desc">Send musics and videos to others in a blank of the eye</string>
    <string name="slide_4_title">Your pictures matters</string>
    <string name="slide_4_desc">Send your pictures and make others enjoy at a crystal clear resolution</string>
    <string name="leave_group">Leave Group</string>
    <string name="unsubscribe_to_channel">Unsubscribe to channel</string>
    <string name="unsubscribe_text">Are you sure you want to unsubscribe to</string>
    <string name="unblock">Unblock</string>
    <string name="leave_group_">Are you sure you want to leave</string>
    <string name="images_">No images in this conversation</string>
    <string name="audios_">No audios in this conversation</string>
    <string name="videos_">No videos in this conversation</string>
    <string name="document_">No document in this conversation</string>
    <string name="account">Account</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="delete_my_account">Delete account</string>
    <string name="about_adsd">About ADS</string>
    <string name="number_of_conversation">Number of Conversation</string>
    <string name="number_of_chats">Number of Chats</string>
    <string name="channels_enrolled">Channels enrolled</string>
    <string name="groups_involved">Groups involved</string>
    <string name="user_since">User Since</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="no_user_blocked">No user blocked</string>
    <string name="display_name">Name (at least 4 characters)</string>
    <string name="display_">Name</string>
    <string name="menu_item_copy">Copy</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="choose_country">Please choose your country and enter your phone number</string>
    <string name="name_for_others">Please, enter the name that you want others to see</string>
    <string name="code_sent_message">Please, enter the 6 digit code that has been sent to you
    to verify your phone.</string>
    <string name="six_digit_code" translatable="false">000000</string>
    <string name="verify_phone">Verify phone</string>
    <string name="error_message">There was an error</string>
    <string name="subscriptions">My Subscriptions</string>
    <string name="more_settings">More Settings</string>
    <string name="change_language">Change Language</string>
    <string name="status_profile">Status profile</string>
    <string name="subscription_text">No subscription yet</string>
    <string name="channel_first">First create the channel</string>
    <string name="channel_creation_information">Please enter the channel name or a description</string>
    <string name="channel_restriction">Channel name cannot contain . $ # [ ] /</string>
    <string name="channel_creation_error">Channel name not valid</string>
    <string name="voice_cancelled">Voice message cancelled</string>
    <string name="voice_recorded">Voice message recorded</string>
    <string name="voice_warning">Save an audio of more than one second</string>
    <string name="warn">Cannot select more than</string>
    <string name="items">items</string>
    <string name="chan_settings">Channel Settings</string>
    <string name="cannot">Cannot delete message</string>
    <string name="coming">not coming from you</string>
    <string name="user_blocked_msg">User is among blocked</string>
    <string name="message_err">Can\'t send message to blocked user</string>
    <string name="user_not_available">User no longer available</string>
    <string name="click_to_send">Just click and the message will be sent</string>
    <string name="participant_warning">Please add at least one participant</string>
    <string name="group_restriction">Group name cannot contain . $ # [ ] /</string>
    <string name="add_name">Please add a name</string>
    <string name="group_first">Group must be created first</string>
    <string name="change_group_name">Change group name</string>
    <string name="saving">Saving…</string>
    <string name="changing_group_name">Please wait, group name changing..</string>
    <string name="chan_search">Search Channel</string>
    <string name="un_">Unlock</string>
    <string name="chan_pass_entered">Enter channel\'s password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="try_">Video</string>
    <string name="chan_recon">Reconnect to channel</string>
    <string name="c__a_">Call</string>
    <string name="_calls_">Calls</string>
    <string name="snd_contact">Send contact</string>
    <string name="label_text">Text</string>
    <string name="s">Status</string>
    <string name="see_replies">See replies</string>
    <string name="replying_to">Replying to @</string>
    <string name="audio">Audio</string>
    <string name="chat_background">Chat Background</string>
</resources>