<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_phone_call"
        android:title="@string/c__a_"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_video"
        android:icon="@drawable/ic_videocam"
        android:title="@string/try_"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/searched"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_send_contact"
        android:icon="@drawable/ic_send_contact"
        android:title="@string/snd_contact" />

    <item
        android:id="@+id/menu_media"
        android:icon="@drawable/ic_send_contact"
        android:title="@string/chat_background" />

    <item
        android:id="@+id/menu_live"
        android:title="Live"/>


</menu>

