<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item android:id="@+id/action_reply"-->
        <!--android:icon="@drawable/ic_reply"-->
        <!--android:visible="false"-->
        <!--android:title="@string/reply"-->
        <!--app:showAsAction="always"/>-->

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy_"
        android:title="@string/menu_item_copy"
        app:showAsAction="always"/>

    <item android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_"
        android:title="@string/forward"
        app:showAsAction="always"/>
</menu>
