<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/mainDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/message_text_background_for_me"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:src="@drawable/ic_document_send" />

        <TextView
            android:id="@+id/documentName"
            android:layout_toRightOf="@id/img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@android:color/background_light"
            android:text="@string/that_is_the_document_name_on_firebase" />

        <TextView
            android:id="@+id/timeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingRight="4dp"
            android:textColor="@android:color/background_light"
            android:layout_toRightOf="@id/documentName"
            android:textSize="9sp"
            android:text="@string/_00_00"/>

        <TextView
           android:id="@+id/amount_seen"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:layout_toRightOf="@id/timeMessage"
           android:text="@string/_1"
           android:paddingRight="4dp"
            android:paddingTop="14dp"
           android:textSize="9sp"
           android:textColor="@android:color/white"
           android:drawableLeft="@drawable/ic_download"
           android:drawableStart="@drawable/ic_download"
           android:drawablePadding="4dp"/>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/sender"
        android:id="@+id/senderOfMessage"/>

</androidx.constraintlayout.widget.ConstraintLayout>